improved combination with ConstSchemaMerger and NotSchemaMerger